--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
+    "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.12.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
-    "react-aws-icons": "^1.2.1",
-    "react-bootstrap": "^2.7.4",
-    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
+    "split-pane-react": "^0.1.3",
     "three": "^0.151.3",
     "web-vitals": "^2.1.4"
   },
