--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
+    "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@use-gesture/react": "^10.2.26",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-aws-icons": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
