--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
+    "@react-oauth/google": "^0.11.0",
     "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.12.1",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@use-gesture/react": "^10.2.26",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
