--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
+    "@react-keycloak/web": "^3.4.0",
     "@react-oauth/google": "^0.11.0",
     "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.66.1",
@@ -17,6 +18,7 @@
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
+    "keycloak-js": "^21.1.1",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
