--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-aws-icons": "^1.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
