--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
+    "immutability-helper": "^3.1.1",
     "jquery": "^3.6.4",
     "keycloak-js": "^21.1.1",
     "oidc-client": "^1.11.5",
